--- a/package.json
+++ b/package.json
@@ -8,16 +8,41 @@
     "start": "next start"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
+    "@mui/icons-material": "^6.5.0",
+    "@mui/material": "^6.5.0",
+    "@mui/styles": "^6.5.0",
+    "@mui/system": "^6.5.0",
+    "@mui/x-date-pickers": "^7.29.4",
+    "@reduxjs/toolkit": "^2.9.0",
+    "axios": "^1.12.2",
+    "chart.js": "^4.5.0",
+    "date-fns": "^3.6.0",
+    "dayjs": "^1.11.18",
+    "dotenv": "^16.6.1",
+    "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
+    "material-react-table": "^3.2.1",
+    "next": "15.5.4",
     "react": "19.1.0",
+    "react-chartjs-2": "^5.3.0",
+    "react-copy-to-clipboard": "^5.1.0",
+    "react-datepicker": "^7.6.0",
     "react-dom": "19.1.0",
-    "next": "15.5.4"
+    "react-helmet-async": "^2.0.5",
+    "react-redux": "^9.2.0",
+    "react-table": "^7.8.0",
+    "react-toastify": "^10.0.6",
+    "redux": "^5.0.1",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "tailwindcss": "^4",
+    "typescript": "^5"
   }
 }
