--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react-table": "^7.8.0",
     "react-toastify": "^10.0.6",
     "redux": "^5.0.1",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
